# FarmWatchReloaded

./: CMakeLists.txt  README.md  imagesPath.txt  outputPath.txt
exec/: CMakeLists.txt  fw_filtering.hpp  globalVariables.hpp  main.cpp
libsrc/: CMakeLists.txt  lib_dataImporter.hpp  lib_drawingTools.hpp  lib_imageDatatypes.cpp  lib_imageDatatypes.hpp  lib_imageOperations.hpp  lib_imageProcessing.hpp  lib_poi.hpp
